<resources>
    <string name="app_name">Recipes</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_open">Open</string>
    <string name="action_close">Close</string>

    <string name="category_dinner">Dinner</string>
    <string name="category_dessert">Dessert</string>
    <string name="category_entertaining">Entertaining</string>
    <string name="category_healthy">Healthy</string>

    <!-- Shopping cart -->
    <string name="item_name">Name:</string>
    <string name="item_quantity">Quantity:</string>
    <string name="shopping_cart_title">Shopping cart</string>
    <string name="btn_add_item_text">Add</string>
    <string name="btn_cancel_item">Cancel</string>

    <string name="more">MORE</string>

    <string-array name="drawer_content">
        <item>Home</item>
        <item>Search</item>
        <item>Favorites</item>
        <item>Dinner</item>
        <item>Dessert</item>
        <item>Entertaining</item>
        <item>Healthy</item>
        <item>Shopping Cart</item>
    </string-array>

</resources>
