<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:scrollbarStyle="outsideInset"
    android:background="@android:color/white">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <!--DINNER-->
            <TableRow android:paddingLeft="10dp" android:paddingRight="10dp">
                <TextView
                    android:id="@+id/categoryName"
                    android:gravity="start"
                    android:text="@string/category_dinner"
                    android:textColor="@android:color/black"
                    android:textSize="32sp"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    />
                <Button
                    android:id="@+id/btnMoreDinner"
                    style="?android:attr/buttonStyleSmall"
                    android:minHeight="30dp"
                    android:minWidth="60dp"
                    android:background="@color/ColorPrimaryDark"
                    android:text="@string/more"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:onClick="showDinner"
                    />
            </TableRow>
            <TableRow android:layout_marginTop="10dp">
                <HorizontalScrollView
                    android:id="@+id/myHV"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_centerHorizontal="true"
                    >

                    <LinearLayout
                        android:id="@+id/myGallery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                    </LinearLayout>
                </HorizontalScrollView>

            </TableRow>

            <!--DESSERT-->
            <TableRow android:paddingLeft="10dp" android:paddingRight="10dp" android:paddingTop="10dp">
                <TextView
                    android:id="@+id/categoryName2"
                    android:gravity="start"
                    android:text="@string/category_dessert"
                    android:textColor="@android:color/black"
                    android:textSize="32sp"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    />
                <Button
                    android:id="@+id/btnMoreDessert"
                    style="?android:attr/buttonStyleSmall"
                    android:minHeight="30dp"
                    android:minWidth="60dp"
                    android:background="@color/ColorPrimaryDark"
                    android:text="@string/more"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:onClick="showDessert"
                    />
            </TableRow>
            <TableRow android:layout_marginTop="10dp">
                <HorizontalScrollView
                    android:id="@+id/myHV2"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_centerHorizontal="true"
                    >

                    <LinearLayout
                        android:id="@+id/myGallery2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                    </LinearLayout>
                </HorizontalScrollView>
            </TableRow>

            <!--ENTERTAINING-->
            <TableRow android:paddingLeft="10dp" android:paddingRight="10dp" android:paddingTop="10dp">
                <TextView
                    android:id="@+id/categoryName3"
                    android:gravity="start"
                    android:text="@string/category_entertaining"
                    android:textColor="@android:color/black"
                    android:textSize="32sp"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    />
                <Button
                    android:id="@+id/btnMoreEnter"
                    style="?android:attr/buttonStyleSmall"
                    android:minHeight="30dp"
                    android:minWidth="60dp"
                    android:background="@color/ColorPrimaryDark"
                    android:text="@string/more"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:onClick="showEnter"
                    />
            </TableRow>
            <TableRow android:layout_marginTop="10dp">
                <HorizontalScrollView
                    android:id="@+id/myHV3"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_centerHorizontal="true"
                    >

                    <LinearLayout
                        android:id="@+id/myGallery3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                    </LinearLayout>
                </HorizontalScrollView>
            </TableRow>

            <!--HEALTHY-->
            <TableRow android:paddingLeft="10dp" android:paddingRight="10dp" android:paddingTop="10dp">
                <TextView
                    android:id="@+id/categoryName4"
                    android:gravity="start"
                    android:text="@string/category_healthy"
                    android:textColor="@android:color/black"
                    android:textSize="32sp"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    />
                <Button
                    android:id="@+id/btnMoreHealthy"
                    style="?android:attr/buttonStyleSmall"
                    android:minHeight="30dp"
                    android:minWidth="60dp"
                    android:background="@color/ColorPrimaryDark"
                    android:text="@string/more"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:onClick="showHealthy"
                    />
            </TableRow>
            <TableRow android:layout_marginTop="10dp">
                <HorizontalScrollView
                    android:id="@+id/myHV4"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_centerHorizontal="true"
                    >

                    <LinearLayout
                        android:id="@+id/myGallery4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                    </LinearLayout>
                </HorizontalScrollView>

            </TableRow>
        </TableLayout>

</ScrollView>
